# smp-zk-proofs

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  EXAMPLES.md  IMPLEMENTATION_SUMMARY.md  IMPROVEMENTS_SUMMARY.md  LICENSE  PRODUCTION_COMPLETION_REPORT.md  README.md  RELEASE.md  ROADMAP.md  SECURITY.md  rust-toolchain.toml
.cargo/: fuzz.toml
.github/workflows/: ci.yml  release.yml  rust-ci.yml
benches/: proof_benchmarks.rs
docs/: PRODUCTION_READINESS.md  QUICK_START_PRODUCTION.md  SECURITY_GUIDELINES.md
examples/: simple_location_proof.rs  weight_aggregation_proof.rs
fuzz/: proof_fuzz_targets.rs
scripts/: release.sh
src/: error.rs  lib.rs
src/constraints/: location_circuit.rs  mod.rs  training_circuit.rs
src/pq_compatibility/: hybrid_mode.rs  lattice_backend.rs  migration.rs  mod.rs  pq_backends.rs
src/proofs/: generator.rs  groth16_backend.rs  groth16_circuits.rs  halo2_backend.rs  halo2_circuits.rs  mod.rs  types.rs  verifier.rs
src/utils/: mod.rs
tests/: csp_rng_tests.rs  end_to_end.rs  integration_tests.rs  property_based_tests.proptest-regressions  property_based_tests.rs
