[package]
name = "smp-zk-proofs"
version = "0.1.0"
edition = "2021"
description = "Scaffold for verifiable aggregation proofs in Sovereign Map style spatial networks"
license = "MIT"
repository = "https://github.com/rwilliamspbg-ops/smp-zk-proofs"

[dependencies]
# Serialization
bincode = "1.3"
serde = { version = "1.0", features = ["derive"] }

# Hashing
sha2 = "0.11.0"
thiserror = "2.0"

# Arkworks for zk-SNARKs (Groth16)
ark-ff = "0.4"
ark-ec = "0.4"
ark-poly = "0.4"
ark-relations = "0.4"
ark-snark = "0.4"
ark-std = "0.4"
ark-bls12-381 = "0.4"
ark-groth16 = "0.4"
ark-crypto-primitives = "0.4"
ark-serialize = "0.4"

# Post-quantum cryptography (Dilithium)
pqcrypto-dilithium = "0.1"

# Ed25519 for comparison/fallback
ed25519-dalek = "2.2.0"

# Randomness
rand = "0.8"

[dev-dependencies]
criterion = "0.5"

[[bench]]
name = "proof_benchmarks"
harness = false
