[package]
name = "smp-zk-proofs"
version = "0.1.0" 
authors = ["Ryan Williams <r.williamspbg@gmail.com>"]
edition = "2024"
description = "A Rust library providing verifiable aggregation ledgers in distributed spatial networks using zero-knowledge proofs."
documentation = "https://docs.rs/smp-zk-proofs"
homepage = "https://github.com/rwilliamspbg-ops/smp-zk-proofs"
repository = "https://github.com/rwilliamspbg-ops/smp-zk-proofs"
license = "MIT"
readme = "README.md"
keywords = ["cryptography", "zkp", "spatial-networks", "halo2", "arkworks"]
categories = ["cryptography", "science"]

[dependencies]
bincode = "1.3"
ed25519-dalek = "2.2.0"
serde = { version = "1.0.228", features = ["derive"] }
sha2 = "0.10"
thiserror = "2.0.18"

[dev-dependencies]
criterion = "0.8.2"

[[bench]]
name = "proof_benchmarks"
harness = false

[features]
default = []
# Enable the Halo2 proving backend (opt-in). Add real backend deps when ready.
halo2 = []
groth16 = [
	"ark-groth16",
	"ark-bn254",
	"ark-ff",
	"ark-serialize",
	"ark-relations",
	"ark-std",
	"rand",
	"ark-r1cs-std",
]

[dependencies.ark-r1cs-std]
version = "0.4"
optional = true

[dependencies.halo2_proofs]
version = "0.1"
optional = true

[package.metadata]
note = "Halo2 feature is opt-in; pinned optional deps are below"

[dependencies.ark-groth16]
version = "0.4"
optional = true

[dependencies.ark-bn254]
version = "0.4"
optional = true

[dependencies.ark-ff]
version = "0.4"
optional = true

[dependencies.ark-serialize]
version = "0.4"
optional = true

[dependencies.ark-relations]
version = "0.4"
optional = true

[dependencies.ark-std]
version = "0.4"
optional = true

[dependencies.rand]
version = "0.8"
optional = true

