[package]
name = "smp-zk-proofs"
version = "0.1.0"
authors = ["Ryan Williams <r.williamspbg@gmail.com>"]
edition = "2024"
rust-version = "1.91"
description = "ZK proof primitives for verifiable location and ML-training claims. Stable Ed25519-transcript backend ships by default; Groth16 (arkworks/BN-254) and Halo2 are opt-in feature flags."
documentation = "https://docs.rs/smp-zk-proofs"
homepage = "https://github.com/rwilliamspbg-ops/smp-zk-proofs"
repository = "https://github.com/rwilliamspbg-ops/smp-zk-proofs"
license = "MIT"
readme = "README.md"
keywords = ["cryptography", "zkp", "spatial-networks", "halo2", "arkworks"]
categories = ["cryptography", "science"]

[dependencies]
# Core dependencies (production-ready)
bincode = "1.3"
ed25519-dalek = { version = "2.2.0", features = ["rand"] }  # Added rand feature for CSPRNG
serde = { version = "1", features = ["derive", "alloc", "rc"] }  # Added alloc/rc for production
sha2 = "0.10"
thiserror = "2.0.18"
constant_time_eq = { version = "0.3", optional = true }

# Optional dependencies (feature-gated)
rand = { version = "0.8", optional = true }  # For CSPRNG
constant_time_eq = { version = "0.3", optional = true }  # For constant-time comparisons

[dev-dependencies]
criterion = { version = "0.8.2", features = ["html_reports", "plotters"] }  # Added plotters for viz
proptest = "1.4"  # Property-based testing
cargo-fuzz = "0.7"  # Fuzzing integration

[[bench]]
name = "proof_benchmarks"
harness = false

[features]
default = []
# Enable the Halo2 proving backend (opt-in). Add real backend deps when ready.
halo2 = ["halo2_proofs"]
groth16 = [
	"ark-groth16",
	"ark-bn254",
	"ark-ff",
	"ark-serialize",
	"ark-relations",
	"ark-std",
	"rand",
	"ark-r1cs-std",
]

[dependencies.ark-r1cs-std]
version = "0.6"
optional = true

[dependencies.halo2_proofs]
version = "0.1"
optional = true

[dependencies.ark-groth16]
version = "0.6"
optional = true

[dependencies.ark-bn254]
version = "0.6"
optional = true

[dependencies.ark-ff]
version = "0.6"
optional = true

[dependencies.ark-serialize]
version = "0.6"
optional = true

[dependencies.ark-relations]
version = "0.6"
optional = true

[dependencies.ark-std]
version = "0.6"
optional = true

[dependencies.rand]
version = "0.8"
optional = true

[build-dependencies]
# Add build script for version info and feature detection
version_check = "0.9"
